# aoc2022

./: .gitignore  Cargo.toml  README.md  download.sh
day01/: README.md
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/src/: main.rs
day05/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs
day08/src/: main.rs
day09/src/: main.rs
day10/src/: main.rs
day11/src/: main.rs
day12/src/: main.rs
day13/: test
day13/src/: main.rs
day14/: Cargo.toml  README.md
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/src/: main.rs
day18/src/: main.rs
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
